--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev ./src/index.ts",
-    "serve": "ts-node ./src/index.ts"
+    "dev": "ts-node ./src/index.ts",
+    "watch": "ts-node-dev ./src/index.ts",
+    "build": "tsc",
+    "start": "node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,9 +19,9 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
-    "typescript": "^5.0.4",
-    "tsc": "^2.0.4",
     "ts-node": "^10.4.0",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "tsc": "^2.0.4",
+    "typescript": "^5.9.3"
   }
 }
